--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
   "theme_color": "#0b0b0b",
   "icons": [
     {
-      "src": "/assets/loghetto.png",
+      "src": "/assets/loghetto.png?v=2",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/assets/loghetto.png",
+      "src": "/assets/loghetto.png?v=2",
       "sizes": "512x512",
       "type": "image/png"
     }
